Fix expand/collapse of children.
Keep children in DOM so visibility is kept in state when
collapsed/expanded by parents.

--- a/src/ComponentHierarchy.css
+++ b/src/ComponentHierarchy.css
@@ -67,6 +67,9 @@ div.hierarchy-list {
     font-size: medium;
     line-height: 13px;
 }
+.hide {
+    display: none;
+}
  
 .component-panel li ul
 {
